# rs-voxie

./: AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  notes.md
.github/workflows/: build-nightly.yml  build-pong-server.yml  build-windows.yml  release-build.yml
assets/shaders/: checkerboard-3d.frag  cube-diffuse-normal.frag  cube-diffuse-normal.vert  cube-diffuse.frag  cube-outline.frag  cube-tex.frag  cube.frag  cube.vert  fog.frag  fog.vert  projectile.vert  projectile_2d.frag  projectile_2d.vert  quad.frag  quad.vert  sphere_rt.frag  squid.vert  voxel.vert
src/: application.rs  benchmark.rs  camera.rs  collision.rs  command_queue.rs  config.rs  cube.rs  game.rs  input.rs  lib.rs  main.rs  metrics.rs  objmesh.rs  octree.rs  player.rs  quadmesh.rs  renderer.rs  scene.rs  shader.rs  triangle.rs  util.rs  voxel.rs  world.rs
src/cameras/: camera.rs  component.rs  fpscam.rs  mod.rs  orbit.rs  thirdpersoncam.rs
src/collision/: aabb.rs  capsule.rs  mod.rs  model.rs  query.rs  ray.rs  sphere.rs  system.rs
src/ecs/: mod.rs
src/logic/: gun.rs  mod.rs
src/meshes/: cubemesh.rs  mod.rs  objmesh.rs  quadmesh.rs  sphere.rs
src/network/: client.rs  command.rs  ecs.rs  headless.rs  message.rs  meter.rs  mod.rs  scene.rs  server.rs  snapshot.rs  time_sync.rs  world.rs
src/octree/: bbs.rs  iter_commons.rs  iter_empty.rs  iter_node.rs  mod.rs  node.rs  tree.rs
src/player/: mod.rs
src/pong/: ai.rs  ball.rs  boundary.rs  collision.rs  mod.rs  paddle.rs  player.rs  scene.rs
src/pong/client/: ai.rs  ball.rs  boundary.rs  mod.rs  paddle.rs  player.rs  protocol.rs  scene.rs  sync.rs
src/pong/common/: ball.rs  boundary.rs  mod.rs  paddle.rs  player.rs
src/pong/network/: client.rs  cmd.rs  codec.rs  input.rs  mod.rs  server.rs
src/pong/server/: lobby.rs  mod.rs  player.rs  (+5 more)
src/projectiles/: mod.rs  projectile.rs  projectile_system.rs
src/renderer/: ecs_renderer.rs  frame_uniforms.rs  meshes.rs  metrics.rs  mod.rs  shader.rs  texture.rs
src/scenes/: benchmark.rs  collision.rs  game.rs  lighting.rs  metrics.rs  mod.rs  scene.rs
src/systems/: mod.rs
src/util/: ecs.rs  mod.rs  sma.rs
src/voxels/: collision.rs  mod.rs  voxel.rs  voxel_renderer.rs  world.rs
src/voxie/: game_context.rs  mod.rs  scene.rs
(+16 files in other folders)
