[package]
name = "rs-voxie"
version = "0.1.0"
edition = "2024"


[dependencies]
imgui = "0.12.0"
gl = "0.14"
glam = {version = "0.30.5", features = ["bytemuck"]}
glow = "0.14"
bytemuck = "1.23.2"
glutin = "0.32"
glutin-winit = "0.5"
imgui-glow-renderer = "0.13.0"
imgui-winit-support = "0.13.0"
raw-window-handle = "0.6.0"
winit = { version = "0.30", features = ["wayland"] }

