[package]
name = "rs-voxie"
version = "0.1.0"
edition = "2024"


[dependencies]
bytemuck = "1.23.2"
env_logger = "0.11.8"
gl = "0.14"
glam = {version = "0.30.5", features = ["bytemuck"]}
glow = "0.14"
glutin = "0.32"
glutin-winit = "0.5"
image = "0.25.8"
imgui = "0.12.0"
imgui-glow-renderer = "0.13.0"
imgui-winit-support = "0.13.0"
log = "0.4.28"
noise = "0.9.0"
raw-window-handle = "0.6.0"
rayon = "1.11.0"
uuid = {version = "1.19.0", features = ["v4"]}
winit = { version = "0.30", features = ["wayland"] }

