[package]
name = "rs-voxie"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.23.2"
bincode = "1.3.3"
env_logger = "0.11.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
gl = "0.14"
glam = { version = "0.30.5", features = ["bytemuck", "serde"] }
glow = "0.14"
glutin = { version = "0.32", optional = true }
glutin-winit = { version = "0.5", optional = true }
hecs = "0.10.5"
image = "0.25.8"
imgui = { version = "0.12.0", optional = true }
imgui-glow-renderer = { version = "0.13.0", optional = true }
imgui-winit-support = { version = "0.13.0", optional = true }
log = "0.4.28"
noise = "0.9.0"
raw-window-handle = "0.6.0"
rayon = "1.11.0"
winit = { version = "0.30", features = ["wayland"], optional = true }

[features]
default = []                # default has no GUI
gui = [
    "imgui",
    "imgui-glow-renderer",
    "imgui-winit-support",
    "winit",
    "glutin",
    "glutin-winit"
]

[[bin]]
name = "pong-server"
path = "src/bin/pong-server.rs"
[[bin]]
name = "pong-client"
path = "src/bin/pong-client.rs"
required-features = ["gui"]
[[bin]]
name = "voxie"
path = "src/bin/voxie.rs"
required-features = ["gui"]
[[bin]]
name = "debug"
path = "src/bin/debug.rs"
required-features = ["gui"]
